experimental/parser/testdata/parser/import/no_path.proto.stderr.txt
error: missing import path in import
  --> testdata/parser/import/no_path.proto:5:1
   |
 5 | import;
   | ^^^^^^^

error: missing import path in import
  --> testdata/parser/import/no_path.proto:6:1
   |
 6 | import weak;
   | ^^^^^^^^^^^^

error: missing import path in import
  --> testdata/parser/import/no_path.proto:7:1
   |
 7 | import public;
   | ^^^^^^^^^^^^^^

error: missing import path in import
  --> testdata/parser/import/no_path.proto:8:1
   |
 8 | import option;
   | ^^^^^^^^^^^^^^

encountered 4 errors
